# spark

./: .env.example  .gitignore  COMPLETE_MAKER_PIPELINE_GUIDE.md  IMAGE_GENERATION_SOLUTION.md  VEO3_UPDATE_SUMMARY.md  VIDEO_GENERATION_README.md  check_available_models.py  complete_maker_pipeline.py  configure_veo3.py  demo_flask_api.py  extract_video_prompts.py  pyproject.toml  quick_setup_veo3.py  qwen_cli_chat.py  requirements_api.txt  run_api.py  run_maker_crew.py  setup_gcloud.sh  test_google_ai_models.py  test_maker_crew_pipeline.py  test_project_extraction.py  test_qwen_api.py  test_veo3_sdk.py  test_veo3_simple.py  test_veo3_vertex_ai.py  test_veo3_with_client.py
IngoreThoseTestingFile/: test_project_integration.py  test_real_veo3.py  test_single_image.py  test_storage_system.py  test_wanx_direct.py  test_wanx_image.py
backend/: .env.template  API_INTEGRATION_GUIDE.md  COMPLETE_CHATBOT_TEST_REPORT.md  FLASK_API_SUMMARY.md  INTEGRATED_PIPELINE_SUMMARY.md  MAKER_CREW_TEST_REPORT.md  README.md  VEO3_QUOTA_FIX_SUMMARY.md  check_api_dependencies.py  check_veo3_status.py  crewai_flow.html  demo_confirmation_system.py  env.example  formatted_prompts_7570de8d-2952-44ba-95ac-f9397c95ac0f.json  frontend_example.html  requirements_api.txt  run_api.py  run_chatbot.py  run_integrated_pipeline.py  run_video_production_flow.py  simple_api.py  simple_api_test.py  test_api_integration.py  test_quota_management.py  veo3_quota_config.py
src/spark/: config.py  (+5 more)
temp_video_processing/: file_list.txt
tests/: test_error_handling.py  test_models.py  test_simple_confirmation.py
(+129 files in other folders)
