[project]
name = "spark"
version = "0.1.0"
description = "spark using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
]

[project.scripts]
kickoff = "spark.main:kickoff"
run_crew = "spark.main:kickoff"
plot = "spark.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
